# Dune

./: .env  Cargo.toml  Dune_Alliance_Cards.docx  Dune_Kwisatz_Haderach_Card.docx  Dune_Starting_Faction_Cards.docx  Dune_Storm_Cards.docx  export_ccw_verts  models.blend  models.blend1
assets/: big_token.gltf  board.gltf  card.gltf  little_token.gltf  spice_token.gltf
data/: camera_nodes.ron  card_effects.ron  factions.ron  leaders.ron  locations.ron  selects.ron  spice_cards.ron  token_nodes.ron  traitor_nodes.ron  treachery.ron  treachery_cards.ron  treachery_deck.ron  ui.ron
pnp/: Dune_Bonus_Cards.docx  Dune_Map_By_Ilya.docx  Dune_Military_Leader_Discs.docx
src/: active.rs  camera_nodes.ron  components.rs  data.rs  input.rs  lerper.rs  locations.ron  main.rs  menu.rs  network.rs  phase.rs  prediction_nodes.ron  resources.rs  spice.ron  stack.rs  util.rs
src/game/: actions.rs  mod.rs  object.rs  state.rs  systems.rs
src/game/phase/: bidding.rs  mod.rs  setup.rs  spice_blow.rs  storm.rs
src/game/phases/: mod.rs  setup.rs  storm.rs
src/game/phases/setup/: at_start.rs  choose_factions.rs  mod.rs  prediction.rs
src/game/state/: data.rs  mod.rs
src/network/: client.rs  mod.rs  server.rs
src/phase/: actions.rs  mod.rs  stage.rs  systems.rs
