[package]
name = "dune"
version = "0.1.0"
authors = ["Alex Coats <alexandcoats@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "0.99", default-features = false, features = [
    "display",
    "from",
    "try_into",
] }
dotenv = "0.15"
bevy = "0.8"
bevy-inspector-egui = { version = "0.12", optional = true }
bevy_mod_picking = "0.9"
bevy_renet = "0.0"
bincode = "1.3"
iyes_loopless = "0.7"
maplit = "1.0"
rand = "0.8"
renet = "0.0"
ron = "0.8"
serde = { version = "1.0", features = ["serde_derive"] }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"

[features]
default = ["debug"]
debug = ["bevy-inspector-egui"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
